# svgex

./: .gitignore  .gitmodules  .readthedocs.yml  CMakeLists.txt  LICENSE  README.md  doxyfile
cmake/: CopyDirectory.cmake  CopyFile.cmake  FindBIMPPPlan2D.cmake  FindRapidJSON.cmake  FindRapidXMLNS.cmake  FindSVGPP.cmake
docs/: CMakeLists.txt  Doxyfile  conf.py  index.rst
include/bimpp/: svgex.hpp
include/bimsvg/: bimsvg.h  bimsvg.hpp
src/: CMakeLists.txt  demo.cpp  svgex.cpp
