cmake_minimum_required(VERSION 3.12 FATAL_ERROR)

project(bimsvg)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set(CMAKE_INSTALL_PREFIX "install" CACHE STRING "prefix")

set(CMAKE_MODULE_PATH
    ${CMAKE_SOURCE_DIR}/cmake
    ${CMAKE_MODULE_PATH}
    )
set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "_cmake")

set(BIMSVG_PATH_ROOT ${CMAKE_SOURCE_DIR})
set(BIMSVG_PATH_EXTERNALS ${CMAKE_SOURCE_DIR}/externals)
set(BIMSVG_PATH_DOCS ${CMAKE_SOURCE_DIR}/docs)
set(BIMSVG_PATH_INCLUDE ${CMAKE_SOURCE_DIR}/include)
set(BIMSVG_PATH_SRC ${CMAKE_SOURCE_DIR}/src)
set(BIMSVG_PATH_OUTPUT ${CMAKE_SOURCE_DIR}/output)
set(BIMSVG_PATH_OUTPUT_BIN ${BIMSVG_PATH_OUTPUT}/bin)
set(BIMSVG_PATH_OUTPUT_LIB ${BIMSVG_PATH_OUTPUT}/lib)

find_package(Boost REQUIRED)
find_package(RapidXMLNS REQUIRED)
find_package(SVGPP REQUIRED)
find_package(RapidJSON REQUIRED)

set(BIMSVG_PATH_INCLUDE_LIST
    ${Boost_INCLUDE_DIR}
    ${RAPIDXMLNS_PATH_INCLUDE}
    ${SVGPP_PATH_INCLUDE}
    ${RAPIDJSON_PATH_INCLUDE}
    ${BIMSVG_PATH_INCLUDE}
    )

set(BIMSVG_PATH_SRC_FILE_LIST
    ${BIMSVG_PATH_INCLUDE}/bimsvg/bimsvg.hpp
    )

add_subdirectory(docs)
add_subdirectory(src)

set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT demo)
